# drone-video-stabilizer

./: .gitignore  CITATION.cff  app.py  cli.py  main.py  pyproject.toml  readme.md  video_stabilizer.py
.github/workflows/: build.yml
app/: VideoStabilizer.spec
app/icon/: icon_converter.py
app/icon/output_icons/: icon.icns
src/: gui.py
video_stabilizer/: __init__.py  command.py  gui.py  logic.py
