[tool.poetry]
name = "video-stabilizer"
version = "0.0.1"
description = "A video stabilization tool using Python and OpenCV"
authors = ["jan.meischner@uni-rostock.de"]
license = "MIT"
packages = [{include = "video_stabilizer"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
opencv-python = "^4.5.3"
numpy = "^1.21.0"
tqdm = "^4.61.2"
pyinstaller = "^6.0"
pygments = "^2.9.0"
pillow = "^11.3.0"
rich = "^14.0.0"

[tool.poetry.scripts]
video-stabilizer = "cli:main"
generate-icons = "app.icon.icon_converter:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
